--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body class="body">
-    <div class="audio_i">
+    <div class="audio_i audio_i_x">
         <audio autoplay id="audio_box">
             <source src="audio/hp.mp3" type="audio/mpeg">
         </audio>
