--- a/index.html
+++ b/index.html
@@ -765,17 +765,18 @@
             $(".audio_i").on("click", function () {
                 event.stopPropagation();//防止冒泡
                 if (audio.paused) { //如果当前是暂停状态
-                    audio.play(); //播放
                     $(this).removeClass("audio_i_x");
+                    audio.play(); //播放
                     return;
                 } else {//当前是播放状态
-                    audio.pause(); //暂停
                     $(this).addClass("audio_i_x");
+                    audio.pause(); //暂停
                 }
             })
 
             //开始
             $(".ks").on("click", function () {
+                $(".audio_i").removeClass("audio_i_x");
                 audio.play();
                 swiper_body.allowSlideNext = true;//设置
                 swiper_body.slideNext();
